6 new flavours html fixed

--- a/chickenrice.html
+++ b/chickenrice.html
@@ -107,15 +107,15 @@
             <!-- 3 part grid starts here -->
             <!-- first column -->
             <div class="product-info-img">
-                <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png" alt="">
+                <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png" alt="">
             </div>
             <!-- second column / empty column -->
             <!-- <div class=""></div> -->
             <!-- third column -->
             <div class="product-info-text">
                 <div class="product-name-desc">
-                    <h3>Sambal Belacan Cashews</h3>
-                    <h6>Elevate your taste buds with our Sambal Belacan cashews, a symphony of spicy and savoury. Each cashew is coated in a rich blend of traditional sambal and belacan, delivering an hearty kick in every bite.</h6>
+                    <h3>Chicken Rice Cashews</h3>
+                    <h6>Get ready for a culinary journey with our Chicken Rice cashews. Infused with the fragrant blend of ginger, garlic, and chicken essence, these nuts capture the essence of Singapore's beloved Chicken Rice, creating a nutty symphony that's simply irresistible.</h6>
                 </div>
                 <div class="ind-prod-review-line">
                     <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -176,30 +176,9 @@
             <div class="flavours row">
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="chillicrab.html">
-                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
-                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="blackpepper.html">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="mala.html">
-                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
-                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="saltroasted.html">
-                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
-                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -211,9 +190,51 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="mala.html">
+                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chillicrab.html">
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="laksa.html">
                             <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
                         <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="blackpepper.html">
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="smokybbq.html">
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                        <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="saltroasted.html">
+                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -230,26 +251,11 @@
                         <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
                     </div>
                 </div>
-                <!-- new flavours -->
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
                         <a href="durian.html">
                             <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
                         <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="wantonmee.html">
-                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
-                        <p>Experience the magic of Wanton Mee in every cashew.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="chickenrice.html">
-                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
-                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
