--- a/sambal.html
+++ b/sambal.html
@@ -176,9 +176,23 @@
             <div class="flavours row">
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="mala.html">
+                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="chillicrab.html">
                             <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
                         <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="laksa.html">
+                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
+                        <p>Take a flavourful journey with our Laksa-infused cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -190,16 +204,9 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="mala.html">
-                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
-                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="saltroasted.html">
-                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
-                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                        <a href="smokybbq.html">
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                        <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -211,9 +218,23 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="laksa.html">
-                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                        <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chickenrice.html">
+                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
+                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="saltroasted.html">
+                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -230,26 +251,11 @@
                         <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
                     </div>
                 </div>
-                <!-- new flavours -->
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
                         <a href="durian.html">
                             <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
                         <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="wantonmee.html">
-                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
-                        <p>Experience the magic of Wanton Mee in every cashew.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="chickenrice.html">
-                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
-                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
