--- a/whiterabbit.html
+++ b/whiterabbit.html
@@ -107,15 +107,15 @@
             <!-- 3 part grid starts here -->
             <!-- first column -->
             <div class="product-info-img">
-                <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png" alt="">
+                <img src="images/shop-products/best-bandung-flavoured-cashews.png" alt="">
             </div>
             <!-- second column / empty column -->
             <!-- <div class=""></div> -->
             <!-- third column -->
             <div class="product-info-text">
                 <div class="product-name-desc">
-                    <h3>Sambal Belacan Cashews</h3>
-                    <h6>Elevate your taste buds with our Sambal Belacan cashews, a symphony of spicy and savoury. Each cashew is coated in a rich blend of traditional sambal and belacan, delivering an hearty kick in every bite.</h6>
+                    <h3>White Rabbit Cashews</h3>
+                    <h6>Nostalgia meets innovation with our White Rabbit-flavoured cashews. Immerse yourself in the creamy sweetness of this iconic candy, as each nut is coated in a luscious layer of condensed milk, creating a nutty treat that evokes memories of childhood delights.</h6>
                 </div>
                 <div class="ind-prod-review-line">
                     <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -176,48 +176,6 @@
             <div class="flavours row">
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="chillicrab.html">
-                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
-                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="blackpepper.html">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="mala.html">
-                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
-                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="saltroasted.html">
-                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
-                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="saltedegg.html">
-                            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
-                        <p>Indulge in the rich, savory allure of salted egg cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="laksa.html">
-                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                        <p>Take a flavourful journey with our Laksa-infused cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
                         <a href="biscoff.html">
                             <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
                         <p>Indulge in our irresistible Biscoff-infused cashews.</p>
@@ -230,12 +188,74 @@
                         <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
                     </div>
                 </div>
-                <!-- new flavours -->
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="bandung.html">
+                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
+                    </div>
+                </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
                         <a href="durian.html">
                             <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
                         <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="saltroasted.html">
+                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="mala.html">
+                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                        <p>Ignite your taste buds with the fiery sensation of Mala.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chillicrab.html">
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="laksa.html">
+                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
+                        <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="blackpepper.html">
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="smokybbq.html">
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                        <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="saltedegg.html">
+                            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
+                        <p>Indulge in the rich, savory allure of salted egg cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -250,20 +270,6 @@
                         <a href="chickenrice.html">
                             <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
                         <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="bandung.html">
-                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
-                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4 col-4">
-                    <div>
-                        <a href="whiterabbit.html">
-                            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
-                        <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
                     </div>
                 </div>
             </div>
