all product pages have been fixed

--- a/chillicrab.html
+++ b/chillicrab.html
@@ -188,6 +188,13 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="laksa.html">
                             <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
                         <p>Take a flavourful journey with our Laksa-infused cashews.</p>
@@ -233,6 +240,27 @@
                         <a href="blackpepper.html">
                             <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
                         <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="durian.html">
+                            <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
+                        <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="bandung.html">
+                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="whiterabbit.html">
+                            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
                     </div>
                 </div>
             </div>
