--- a/blackpepper.html
+++ b/blackpepper.html
@@ -178,6 +178,13 @@
             <div class="flavours row">
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="smokybbq.html">
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                        <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="mala.html">
                             <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
                         <p>Ignite your taste buds with the fiery sensation of Mala.</p>
@@ -188,6 +195,20 @@
                         <a href="laksa.html">
                             <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
                         <p>Take a flavourful journey with our Laksa-infused cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chillicrab.html">
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -206,9 +227,16 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="smokybbq.html">
-                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
-                        <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chickenrice.html">
+                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
+                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -227,9 +255,23 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="chillicrab.html">
-                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
-                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                        <a href="durian.html">
+                            <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
+                        <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="bandung.html">
+                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="whiterabbit.html">
+                            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
                     </div>
                 </div>
             </div>
