--- a/mala.html
+++ b/mala.html
@@ -178,6 +178,20 @@
             <div class="flavours row">
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="chillicrab.html">
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
+                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="blackpepper.html">
                             <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
                         <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
@@ -192,9 +206,9 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="saltroasted.html">
-                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
-                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                        <a href="chickenrice.html">
+                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
+                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -213,6 +227,20 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="saltroasted.html">
+                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                        <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="biscoff.html">
                             <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
                         <p>Indulge in our irresistible Biscoff-infused cashews.</p>
@@ -227,9 +255,23 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="chillicrab.html">
-                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
-                        <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                        <a href="durian.html">
+                            <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
+                        <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="bandung.html">
+                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="whiterabbit.html">
+                            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
                     </div>
                 </div>
             </div>
