--- a/saltroasted.html
+++ b/saltroasted.html
@@ -185,6 +185,13 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="blackpepper.html">
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="chocolate.html">
                             <img src="images/shop-products/best-chocolate-flavoured-cashews.png"></a>
                         <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
@@ -192,9 +199,9 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
-                        <a href="blackpepper.html">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                        <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                        <a href="whiterabbit.html">
+                            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
@@ -230,6 +237,41 @@
                         <a href="chillicrab.html">
                             <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
                         <p>A bold tribute to Singapore’s iconic chilli crab.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="durian.html">
+                            <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
+                        <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chickenrice.html">
+                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
+                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="bandung.html">
+                            <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                        <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="sambal.html">
+                            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
+                        <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
                     </div>
                 </div>
             </div>
