pulled angel's edited reviews

--- a/reviews.html
+++ b/reviews.html
@@ -137,14 +137,14 @@
             </div>
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/unique-local-flavours-highly-recommended-snack-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>John Hee</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and the ability to customize my nut mix keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and their seasonal release of unqiue local flavours keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
                         <br><br>
                         11/11/2023
                         </h6>
@@ -154,14 +154,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/bulk-order-healthy-snack-cashew-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Mrs Lee</h4>
+                        <h4>Cheryl Tay</h4>
                         <div class="review-tags"> <h6>Corporate</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nut mixes were a hit at our company anniversary. Guests raved about the unique flavors, and the custom packaging added a personal touch. Kudos for making our event extra special!"
+                        <h6 class="review-statements-h6">"Ordered in bulk for our workplace, and Kacaang's nuts are now a pantry staple. The team loves the healthy options, especially during long meetings. The freshness is a game-changer!"
                         <br><br>
                         29/10/2023
                         </h6>
@@ -171,7 +171,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/healthy-local-flavour-variety-snack-membership-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -188,14 +188,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/unique-flavour-variety-snack-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>Ahmad</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. The local flavors and freshness make it a truly Singaporean snacking experience. My favorites? All of them!"
+                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. There's a wide variety of flavours and the local flavors make it a truly Singaporean snacking experience. My favorites? All of them!"
                         <br><br>
                         23/09/2023
                         </h6>
@@ -205,7 +205,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/customised-wedding-gift-snack.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -222,14 +222,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/fresh-local-flavours-favourite-mala-snack-cashew.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>Raj K.</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to post-workout snack. The local touch and natural goodness keep me energized. A Singaporean snack that perfectly aligns with my fitness journey. Can't recommend it enough!"
+                        <h6 class="review-statements-h6"> "Being a spice lover, Kacaang's Mala Cashews are my absolute favorite. The local twist and the right amount of kick make it a regular in my snack stash. A true Singaporean delight!"
                         <br><br>
                         17/08/2023
                         </h6>
@@ -239,7 +239,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/quality-bulk-order-office-snack-nuts.png" alt="">
+                    <img src="images/reviews/quality-corporate-bulk-order-office-snack-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -259,14 +259,14 @@
         <div id="r-club" class="tabcontent reviews-tabcontent">
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/unique-local-flavours-highly-recommended-snack-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>John Hee</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and the ability to customize my nut mix keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and their seasonal release of unqiue local flavours keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
                         <br><br>
                         11/11/2023
                         </h6>
@@ -276,7 +276,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/healthy-local-flavour-variety-snack-membership-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -293,14 +293,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/unique-flavour-variety-snack-cashews.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>Ahmad</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. The local flavors and freshness make it a truly Singaporean snacking experience. My favorites? All of them!"
+                        <h6 class="review-statements-h6"> "Kacaang's nuts are my go-to for Netflix nights. There's a wide variety of flavours and the local flavors make it a truly Singaporean snacking experience. My favorites? All of them!"
                         <br><br>
                         23/09/2023
                         </h6>
@@ -310,14 +310,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/fresh-local-flavours-favourite-mala-snack-cashew.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
                         <h4>Raj K.</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to post-workout snack. The local touch and natural goodness keep me energized. A Singaporean snack that perfectly aligns with my fitness journey. Can't recommend it enough!"
+                        <h6 class="review-statements-h6"> "Being a spice lover, Kacaang's Mala Cashews are my absolute favorite. The local twist and the right amount of kick make it a regular in my snack stash. A true Singaporean delight!"
                         <br><br>
                         17/08/2023
                         </h6>
@@ -331,14 +331,14 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/bulk-order-healthy-snack-cashew-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Mrs Lee</h4>
+                        <h4>Cheryl Tay</h4>
                         <div class="review-tags"> <h6>Corporate</h6> </div>
-                        <h6 class="review-statements-h6">"Kacaang's nut mixes were a hit at our company anniversary. Guests raved about the unique flavors, and the custom packaging added a personal touch. Kudos for making our event extra special!"
+                        <h6 class="review-statements-h6">"Ordered in bulk for our workplace, and Kacaang's nuts are now a pantry staple. The team loves the healthy options, especially during long meetings. The freshness is a game-changer!"
                         <br><br>
                         29/10/2023
                         </h6>
@@ -348,7 +348,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/quality-bulk-order-office-snack-nuts.png" alt="">
+                    <img src="images/reviews/quality-corporate-bulk-order-office-snack-nuts.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
@@ -385,7 +385,7 @@
 
             <div class="row g-0 review-template">
                 <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
+                    <img src="images/reviews/customised-wedding-gift-snack.png" alt="">
                 </div>
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
