--- a/shop.html
+++ b/shop.html
@@ -110,11 +110,11 @@
       <!-- tab buttons -->
       <div class="tab shop-tab">
         <button class="tablinks" onclick="openTab(event, 'all')" id="defaultOpen">All</button>
+        <button class="tablinks" onclick="openTab(event, 'local')">Local Delights</button>
         <button class="tablinks" onclick="openTab(event, 'sales')" id="salesButton">On Sale</button>
         <button class="tablinks" onclick="openTab(event, 'new')">New</button>
         <button class="tablinks" onclick="openTab(event, 'favourites')">Fan Favourites</button>
         <button class="tablinks" onclick="openTab(event, 'classics')">Classics</button>
-        <button class="tablinks" onclick="openTab(event, 'local')">Local Delights</button>
         <button class="tablinks" onclick="openTab(event, 'bundles')">Bundles</button>
       </div>
 
@@ -186,6 +186,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
@@ -234,6 +235,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-2">
             <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5> Triple Crunch Delight Bundle</h5>
             <div class="shop-review-line">
@@ -276,6 +278,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-3">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5>  Mala Cashews</h5>
             <div class="shop-review-line">
@@ -288,6 +291,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-4">
             <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5> Bundle A</h5>
             <div class="shop-review-line">
@@ -329,6 +333,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-5">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
@@ -452,6 +457,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-5">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
@@ -481,6 +487,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-3">
             <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5>  Bundle A </h5>
             <div class="shop-review-line">
